--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
     <form action="/login" method="POST" class="border p-4 shadow-sm rounded">
       <h2 class="text-center mb-4">Login</h2>
       <div class="form-group">
-        <input type="text" name="identifier" class="form-control" placeholder="Email" required>
+        <input type="text" name="identifier" class="form-control" placeholder="Email or staff id" required>
       </div>
       <div class="form-group">
         <input type="password" name="password" class="form-control" placeholder="Password" required>
