--- a/add.html
+++ b/add.html
@@ -39,6 +39,19 @@
     padding-left: 0; /* Ensures the navbar itself doesn't push content */
 }
 
+
+button {
+            padding: 10px 15px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
     .footer {
   background: #f8f9fa;
   color: #343a40;
@@ -152,21 +165,21 @@
           <label for="formClass">Class</label>
           <select class="form-control" id="formClass" required>
             <option value="" disabled selected>Select Class</option>
-            <option value="Pre_nursery">Pre-Nursery</option>
-            <option value="Nursery_1">Nursery 1</option>
-            <option value="Nursery_2">Nursery 2</option>
-            <option value="Primary_1">Primary 1</option>
-            <option value="Primary_2">Primary 2</option>
-            <option value="Primary_3">Primary 3</option>
-            <option value="Primary_4">Primary 4</option>
-            <option value="Primary_5">Primary 5</option>
-            <option value="Primary_6">Primary 6</option>
-            <option value="JSS_1">JSS 1</option>
-            <option value="JSS_2">JSS 2</option>
-            <option value="JSS_3">JSS 3</option>
-            <option value="SSS_1">SSS 1</option>
-            <option value="SSS_2">SSS 2</option>
-            <option value="SSS_3">SSS 3</option>
+            <option value="Pre-Nursery">Pre-Nursery</option>
+            <option value="Nursery One">Nursery 1</option>
+            <option value="Nursery Two">Nursery 2</option>
+            <option value="Primary One">Primary 1</option>
+            <option value="Primary Two">Primary 2</option>
+            <option value="Primary Three">Primary 3</option>
+            <option value="Primary Four">Primary 4</option>
+            <option value="Primary Five">Primary 5</option>
+            <option value="Primary Six">Primary 6</option>
+            <option value="JSS One">JSS 1</option>
+            <option value="JSS Two">JSS 2</option>
+            <option value="JSS Three">JSS 3</option>
+            <option value="SSS One">SSS 1</option>
+            <option value="SSS Two">SSS 2</option>
+            <option value="SSS Three">SSS 3</option>
           </select>
         </div>
       </div>
@@ -203,6 +216,8 @@
       </div>
 
       <button type="submit" class="btn btn-success btn-block">Submit</button>
+       <button class="btn btn-primary btn-block" onclick="goBack()">back</button>
+
     </form>
 
     <!-- Success/Failure Message -->
@@ -260,9 +275,9 @@
       const studentID = generateStudentID(); // Generate unique student ID
 
       // Get form data
-      const firstname = document.getElementById('firstname').value;
-      const surname = document.getElementById('surname').value;
-      const othername = document.getElementById('othername').value || ''; // Optional field
+      const firstname = document.getElementById('firstname').value.trim().toUpperCase(); // Trim and convert to uppercase
+      const surname = document.getElementById('surname').value.trim().toUpperCase(); // Trim and convert to uppercase
+      const othername = (document.getElementById('othername').value.trim() || '').toUpperCase(); // Trim and convert to uppercase if available
       const studentClass = document.getElementById('formClass').value;
       const subjects = Array.from(document.querySelectorAll('input[name="subjects"]:checked')).map(input => input.value);
       const guardianPhone = document.getElementById('guardianPhone').value;
@@ -302,6 +317,10 @@
   window.location.href = '/logout'; // Redirect to admin logout route
 }
 
+            // back button functionality
+          function goBack() {
+                          window.history.back();
+                          }
 
     // Back to top button functionality
     window.onscroll = function() { scrollFunction() };
