--- a/student_management.html
+++ b/student_management.html
@@ -155,7 +155,7 @@
         <li>View existing students</li>
       </ul>
       <button class="btn btn-primary" onclick="window.location.href='add.html'">Add Student</button>
-      <button class="btn btn-warning">Edit Student</button>
+      <button class="btn btn-warning" onclick="window.location.href='edit.html'">Edit Student</button>
       <button class="btn btn-info">View Students</button>
     </div>
   </div>
