--- a/signup.html
+++ b/signup.html
@@ -45,26 +45,25 @@
     </select>
 </div>
 
-         
                             <div class="mb-3" id="class-selection" style="display: none;">
                                 <label for="class" class="form-label">Class (Form Master)</label>
                                 <select class="form-select" id="formClass" name="formClass">
                                     <option value="" disabled selected>Select Class</option>
-                                    <option value="pre_nursery">Pre-Nursery</option>
-                                    <option value="nursery_1">Nursery 1</option>
-                                    <option value="nursery_2">Nursery 2</option>
-                                    <option value="primary_1">Primary 1</option>
-                                    <option value="primary_2">Primary 2</option>
-                                    <option value="primary_3">Primary 3</option>
-                                    <option value="primary_4">Primary 4</option>
-                                    <option value="primary_5">Primary 5</option>
-                                    <option value="primary_6">Primary 6</option>
-                                    <option value="jss_1">JSS 1</option>
-                                    <option value="jss_2">JSS 2</option>
-                                    <option value="jss_3">JSS 3</option>
-                                    <option value="sss_1">SSS 1</option>
-                                    <option value="sss_2">SSS 2</option>
-                                    <option value="sss_3">SSS 3</option>
+                                    <option value="Pre_Nursery">Pre-Nursery</option>
+                                    <option value="Nursery_1">Nursery 1</option>
+                                    <option value="Nursery_2">Nursery 2</option>
+                                    <option value="Primary_1">Primary 1</option>
+                                    <option value="Primary_2">Primary 2</option>
+                                    <option value="Primary_3">Primary 3</option>
+                                    <option value="Primary_4">Primary 4</option>
+                                    <option value="Primary_5">Primary 5</option>
+                                    <option value="Primary_6">Primary 6</option>
+                                    <option value="JSS_1">JSS 1</option>
+                                    <option value="JSS_2">JSS 2</option>
+                                    <option value="JSS_3">JSS 3</option>
+                                    <option value="SSS_1">SSS 1</option>
+                                    <option value="SSS_2">SSS 2</option>
+                                    <option value="SSS_3">SSS 3</option>
                                 </select>
                             </div>
                             <!-- Subjects teaching using checkboxes -->
